mark self
